[gd_scene load_steps=7 format=2]

[ext_resource path="res://Controller.gd" type="Script" id=1]
[ext_resource path="res://GUI/GUI.gd" type="Script" id=2]
[ext_resource path="res://GUI/font/OpenSans-Regular.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://icon.png" type="Texture" id=4]

[sub_resource type="DynamicFont" id=1]
size = 20
font_data = ExtResource( 3 )

[sub_resource type="Theme" id=2]
default_font = SubResource( 1 )

[node name="Controller" type="Node"]
script = ExtResource( 1 )

[node name="GUI" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
theme = SubResource( 2 )
script = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="InventoryLabel" type="Label" parent="GUI"]
margin_left = 102.0
margin_right = 190.0
margin_bottom = 28.0
text = "Inventory"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InventoryUI" type="ItemList" parent="GUI"]
margin_left = 102.0
margin_top = 34.0
margin_right = 537.0
margin_bottom = 596.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AddProductButton" type="Button" parent="GUI"]
margin_left = 570.0
margin_top = 494.0
margin_right = 697.0
margin_bottom = 528.0
text = "Add Product"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RemoveProductButton" type="Button" parent="GUI"]
margin_left = 570.0
margin_top = 530.0
margin_right = 735.0
margin_bottom = 564.0
text = "Remove product"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SaveButton" type="Button" parent="GUI"]
margin_left = 789.0
margin_top = 494.0
margin_right = 916.0
margin_bottom = 528.0
text = "Save"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LoadButton" type="Button" parent="GUI"]
margin_left = 789.0
margin_top = 530.0
margin_right = 954.0
margin_bottom = 564.0
text = "Load"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ProductNameLineEdit" type="LineEdit" parent="GUI"]
margin_left = 570.0
margin_top = 438.0
margin_right = 715.0
margin_bottom = 478.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CopyButton" type="Button" parent="GUI"]
margin_left = 570.0
margin_right = 648.0
margin_bottom = 34.0
text = "Copy "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CopyLineEdit" type="TextEdit" parent="GUI"]
margin_left = 570.0
margin_top = 35.0
margin_right = 960.0
margin_bottom = 413.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="icon" type="Sprite" parent="."]
position = Vector2( 52, 68 )
texture = ExtResource( 4 )
[connection signal="item_selected" from="GUI/InventoryUI" to="GUI" method="_on_InventoryUI_item_selected"]
[connection signal="pressed" from="GUI/AddProductButton" to="GUI" method="_on_AddProductButton_pressed"]
[connection signal="pressed" from="GUI/RemoveProductButton" to="GUI" method="_on_RemoveProductButton_pressed"]
[connection signal="pressed" from="GUI/SaveButton" to="." method="save_game"]
[connection signal="pressed" from="GUI/LoadButton" to="." method="load_game"]
[connection signal="pressed" from="GUI/CopyButton" to="GUI" method="_on_CopyButton_pressed"]
